invoicesPage-slice: adding filter modal and fixing table data and head alignment

--- a/src/App.css
+++ b/src/App.css
@@ -858,3 +858,78 @@
   color: #EAF0FA;
   padding: 0px 8px;
 }
+
+.modal-test{
+  display: flex;
+  z-index: 2;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.filter-modal-container{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+  z-index: 3;
+  height: 300px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 20px 24px;
+  border-radius: 6px;
+}
+
+.invoice-modal-filter-text{
+  font-weight: 600;
+  font-size: 24px;
+  color: #404040;
+}
+
+.invoice-modal-reset-text-button{
+  font-weight: 600;
+  font-size: 16px;
+  color: #999999;
+  cursor: pointer;
+}
+
+.invoice-modal-reset-text-button:hover{
+  color: #b3b0b0;
+} 
+
+.invoice-modal-border{
+  border: 1px solid #CDCDCD;
+  width: 100%;
+  margin: 16px 0px
+}
+
+.invoice-modal-label-text{
+  font-weight: 400;
+  font-size: 16px;
+  color: #404040;
+}
+
+.modal-filter-submit-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 48px;
+  background-color: #173468;
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 16px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
