--- a/src/components/homepage/SideNavBar.css
+++ b/src/components/homepage/SideNavBar.css
@@ -29,7 +29,6 @@
 	margin: 0 0 0 0;
 	padding: 0 1rem;
 	font-size: 1rem;
-	transition: 0.5s;
 	background-color: #EAF0FA;
 	height: 100vh;
   }
@@ -110,7 +109,6 @@
 	width: var(--nav-width);
 	background-color: var(--first-color);
 	padding-top: 1rem;
-	transition: 0.5s;
 	box-shadow: 0px 4px 8px rgba(14, 31, 53, 0.16);
   }
 
